--- a/index.html
+++ b/index.html
@@ -9,38 +9,162 @@
     <title>Hi-tech</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="css/bootstrap-reboot.css" type="text/css" />
-    <link rel="stylesheet" href="css/bootstrap-min.css" type="text/css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="css/bootstrap-grid.css" type="text/css" />
+    <link rel="stylesheet" href="css/icons.css" type="text/css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 
 <body>
 
-    <header>
+    <header class="container">
 
         <div>
-            <p>Options d'affichage / accessibilité</p>
-            <p>Thème : <a href "#">sombre</a> <a href "#">contrasté</a> <a href "#">clair</a></p>
+            <div>
+                <p>Options d'affichage / accessibilité</p>
+            </div>
+            <ul class="list-inline">
+                <li class="list-inline-item">Thème :</li>
+                <li class="list-inline-item"><a href "#">sombre</a></li>
+                <li class="list-inline-item"><a href "#">contrasté</a></li>
+                <li class="list-inline-item"><a href "#">clair</a></li>
+            </ul>
+            <ul class="list-inline">
+                <li class="list-inline-item">Interlignage :</li>
+                <li class="list-inline-item"><a href "#">simple</a></li>
+                <li class="list-inline-item"><a href "#">augmenté</a></li>
+            </ul>
         </div>
 
         <div>
-
+            <div>
+                <img src="images/logo.svg" class="img-fluid" alt="shop logo"></img>
+                <h1>Hi-Tech.NET</h1>
+                <p>Tout le matériel High-Tech</p>
+            </div>
+            <div>
+                <i class="icon-user"></i>
+                <p>Mon compte</p>
+            </div>
+            <div>
+                <i class="icon-cart"></i>
+                <p>Mon panier</p>
+            </div>
         </div>
 
         <div>
-
+            <div>
+                <i class="icon-display"></i>
+                <p>Ordinateurs</p>
+            </div>
+            <div>
+                <i class="icon-data"></i>
+                <p>Périphériques et composants</p>
+            </div>
+            <div>
+                <i class="icon-phone"></i>
+                <p>Téléphones</p>
+            </div>
+            <div>
+                <i class="icon-clock"></i>
+                <p>Objets connectés</p>
+            </div>
         </div>
 
     </header>
 
-    <main>
+    <main class="container">
+
+        <div>
+            <p>AOC 24B1XHS</p>
+            <div>
+                <a href "#">Présentation</a>
+                <a href="#">Descriptif</a>
+                <a href="#">Caractéristiques techniques</a>
+            </div>
+        </div>
+
+        <div>
+            <p>Présentation</p>
+
+            <div>
+                <span>1920 x 1080 pixels</span>
+                <span>7 ms</span>
+                <span>Format large 16/9</span>
+                <span>Dalle IPS</span>
+                <span>HDMI</span>
+                <span>VGA</span>
+                <span>Noir</span>
+            </div>
+
+            <div>
+                <img src="images/product/slide-1-lg.jpg" class="img-fluid" alt="image principale objet"></img>
+                <div>
+                    <p>Photos non contractuelles</p>
+                    <div class="container">
+                        <img src="images/product/slide-1-md.jpg" class="img-fluid" alt="image principale objet">
+                        <img src="images/product/slide-2-md.jpg" class="img-fluid" alt="image principale objet">
+                        <img src="images/product/slide-3-md.jpg" class="img-fluid" alt="image principale objet">
+                        <img src="images/product/slide-4-md.jpg" class="img-fluid" alt="image principale objet">
+                        <img src="images/product/slide-5-md.jpg" class="img-fluid" alt="image principale objet">
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <p>Marque:AOC</p>
+
+                <div>
+                    <div>
+                        <div>
+                            <p>109€94</p>
+                            <p>dont éco-participation 1€70</p>
+                        </div>
+                        <div>
+                            <button>Ajouter au panier</button>
+                            <button>Ajouter à ma liste d'envie</button>
+                        </div>
+                    </div>
+                    <div>
+                        <p>Garantie : 2 années vendeur</p>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <p>Un écran 23,8" Full HD et sans bords; c'est sûrement votre futur moniteur pour la maison ou le bureau. AOC vous propose le 24B1XHS, un produit élégant au look doté d'une dalle VA avec un temps de réponse rapide de 7 ms en résolution 1920
+                    x 1080 pixels. Cet écran WLED très fonctionnel offre un contenu avec un fréquence de 60 Hz, idéal pour tous les usages du quotidien.</p>
+                <ul>
+                    <li>Écran large de 23.8" avec résolution Full HD (1920 x 1080)</li>
+                    <li>Des couleurs riches et nuancées avec un contraste dynamique de 20.000.000:1 (typique 1000:1)</li>
+                    <li>Temps de réponse de 7 ms</li>
+                    <li>Dalle IPS</li>
+                    <li>Luminosité 250 cd/m²</li>
+                    <li>Modes Flicker-Free et Anti-lumière bleue (Low blue mode)</li>
+                    <li>Connecteurs : HDMI 1.4, VGA </li>
+                    <li>Design sans contour & profil plat</li>
+                    <li>Consommation d'énergie modeste : 25 Watts </li>
+                    <li>Dimensions (avec support) : 419.8 x 540.1 x 186.8 mm</li>
+                    <li>Poids : 2.48 kg</li>
+                </ul>
+            </div>
+
+        </div>
+
+        <div>
+
+        </div>
 
     </main>
 
-    <footer>
+    <footer class="container">
 
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
 </body>
 
