html nearly done

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         <div>
             <div>
-                <img src="images/logo.svg" class="img-fluid" alt="shop logo"></img>
+                <div>
+                    <img src="images/logo.svg" class="img-fluid" alt="shop logo"></img>
+                </div>
                 <h1>Hi-Tech.NET</h1>
                 <p>Tout le matériel High-Tech</p>
             </div>
@@ -99,15 +101,27 @@
             </div>
 
             <div>
-                <img src="images/product/slide-1-lg.jpg" class="img-fluid" alt="image principale objet"></img>
+                <div>
+                    <img src="images/product/slide-1-lg.jpg" class="img-fluid" alt="image principale objet"></img>
+                </div>
                 <div>
                     <p>Photos non contractuelles</p>
-                    <div class="container">
-                        <img src="images/product/slide-1-md.jpg" class="img-fluid" alt="image principale objet">
-                        <img src="images/product/slide-2-md.jpg" class="img-fluid" alt="image principale objet">
-                        <img src="images/product/slide-3-md.jpg" class="img-fluid" alt="image principale objet">
-                        <img src="images/product/slide-4-md.jpg" class="img-fluid" alt="image principale objet">
-                        <img src="images/product/slide-5-md.jpg" class="img-fluid" alt="image principale objet">
+                    <div>
+                        <div>
+                            <img src="images/product/slide-1-md.jpg" class="img-fluid" alt="image principale objet">
+                        </div>
+                        <div>
+                            <img src="images/product/slide-2-md.jpg" class="img-fluid" alt="image principale objet">
+                        </div>
+                        <div>
+                            <img src="images/product/slide-3-md.jpg" class="img-fluid" alt="image principale objet">
+                        </div>
+                        <div>
+                            <img src="images/product/slide-4-md.jpg" class="img-fluid" alt="image principale objet">
+                        </div>
+                        <div>
+                            <img src="images/product/slide-5-md.jpg" class="img-fluid" alt="image principale objet">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -154,11 +168,330 @@
 
         <div>
 
+            <p>Descriptif</p>
+
+            <div>
+                <p>Un moniteur Full HD performant et tout en finesse</p>
+                <div>
+                    <img src="images/product/screen.png" class="img-fluid" alt=""></img>
+                </div>
+                <p>Issu de la série B1, le moniteur AOC 24B1XHS dispose de tous les atouts indispensables pour offrir une expérience utilisateur agréable. Son écran Full HD de 23.8" s'accompagne d'une dalle IPS ainsi que d'un temps de réponse de 7 ms pour
+                    une image toujours performante. Aussi, le 24B1XHS séduit par son profil plat et son design sans contour qui favorise le plaisir visuel et l'immersion. Ce moniteur WLED trouvera facilement une place de choix sur votre bureau pour toutes
+                    vos utilisations quotidiennes.</p>
+            </div>
+
+            <div>
+                <p>Appréciez le design sans contour</p>
+                <div>
+                    <img src="images/product/desc-1.jpg" class="img-fluid" alt=""></img>
+                </div>
+                <p>En plus du look moderne et attrayant qu'il procure, le design sans contour permet des configurations à plusieurs écrans sans interruption. Votre curseur, vos fenêtres ne sont plus perdus dans les abysses sombres des contours lorsque plusieurs
+                    écrans sont placés les uns à côté des autres.</p>
+                <p>Le profil plat de ce moniteur AOC offre de nombreux avantages. Très élégant sous tous les angles, il devient un choix idéal dans les espaces publics. Sa finesse et sa conception moderne lui permettent d'occuper moins de place sur le bureau.</p>
+            </div>
+
+            <div>
+                <p>Tout le confort nécessaire</p>
+                <div>
+                    <img src="images/product/desc-2.jpg" class="img-fluid" alt=""></img>
+                </div>
+                <p>Agréable visuellement et intuitif, ce moniteur dispose également d'une dalle IPS. Cette dernière reproduit des couleurs éclatantes et offre de très larges angles de vue. De cette façon, les images gardent toujours un excellent aspect et
+                    une parfaite précision, quel que soit l'angle auquel vous regardez l'écran. </p>
+                <p>Vous voulez utiliser votre écran même dans un environnement très lumineux, à côté d'une fenêtre au soleil par exemple ? La haute luminosité de 250 cd/m² garantit une bonne visibilité, même dans des conditions difficiles.</p>
+            </div>
+
+        </div>
+
+        <div>
+
+            <p>Caractéristiques techniques</p>
+
+            <div>
+                <p>Affichage</p>
+                <table>
+                    <tr>
+                        <td>Taille de l'écran</td>
+                        <td>23.8 pouces</td>
+                    </tr>
+                    <tr>
+                        <td>Format de l'écran</td>
+                        <td>16/9</td>
+                    </tr>
+                    <tr>
+                        <td>Type de Dalle</td>
+                        <td>Dalle IPS</td>
+                    </tr>
+                    <tr>
+                        <td>Technologie LCD</td>
+                        <td>IPS</td>
+                    </tr>
+                    <tr>
+                        <td>Résolution Max</td>
+                        <td>1920 x 1080 pixels</td>
+                    </tr>
+                    <tr>
+                        <td>Dot Pitch</td>
+                        <td>0.2745 mm</td>
+                    </tr>
+                    <tr>
+                        <td>Luminosité</td>
+                        <td>250 cd/m²</td>
+                    </tr>
+                    <tr>
+                        <td>Contraste</td>
+                        <td>20000000 /1</td>
+                    </tr>
+                    <tr>
+                        <td>Temps de réponse</td>
+                        <td>7 ms</td>
+                    </tr>
+                    <tr>
+                        <td>Angle de vision (horizontal)</td>
+                        <td>178 Degré(s)</td>
+                    </tr>
+                    <tr>
+                        <td>Angle de vision (vertical)</td>
+                        <td>178 Degré(s)</td>
+                    </tr>
+                    <tr>
+                        <td>Dalle mate/antireflets</td>
+                        <td>Oui</td>
+                    </tr>
+                    <tr>
+                        <td>NVIDIA G-SYNC</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Adaptive-Sync</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>AMD FreeSync</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Flicker-Free</td>
+                        <td>Oui</td>
+                    </tr>
+                    <tr>
+                        <td>Anti-lumière bleue</td>
+                        <td>Oui</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Ecran</p>
+                <table>
+                    <tr>
+                        <td>Type d'écran</td>
+                        <td>LED</td>
+                    </tr>
+                    <tr>
+                        <td>Ecran large</td>
+                        <td>Oui</td>
+                    </tr>
+                    <tr>
+                        <td>Ecran incurvé</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Borderless</td>
+                        <td>Oui</td>
+                    </tr>
+                    <tr>
+                        <td>Compatible 3D</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Ecran tactile</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Fréquence verticale mini</td>
+                        <td>60 Hz</td>
+                    </tr>
+                    <tr>
+                        <td>Type d'activités</td>
+                        <td>Bureautique</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Ergonomie</p>
+                <table>
+                    <tr>
+                        <td>Pivot</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Pied réglable en hauteur</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Pied amovible</td>
+                        <td>Oui</td>
+                    </tr>
+                    <tr>
+                        <td>Fixation VESA</td>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <td>Angle inclinaison vers l'arrière (haut)</td>
+                        <td>N/A</td>
+                    </tr>
+                    <tr>
+                        <td>Angle inclinaison vers l'avant (bas)</td>
+                        <td>N/A</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Connectique</p>
+                <table>
+                    <tr>
+                        <td>Entrées vidéo</td>
+                        <td>1 X HDMI Femelle, 1 X VGA (D-sub 15 Femelle)</td>
+                    </tr>
+                    <tr>
+                        <td>Entrée audio</td>
+                        <td>Aucun(e)</td>
+                    </tr>
+                    <tr>
+                        <td>Sorties audio</td>
+                        <td>1 X Line OUT (Jack 3.5mm Femelle)</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Multimédia</p>
+                <table>
+                    <tr>
+                        <td>H.P. Intégrés</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Webcam</td>
+                        <td>Non</td>
+                    </tr>
+                    <tr>
+                        <td>Tuner TV</td>
+                        <td>Non</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Caractéristiques physiques</p>
+                <table>
+                    <tr>
+                        <td>Couleur</td>
+                        <td>Noir</td>
+                    </tr>
+                    <tr>
+                        <td>Largeur</td>
+                        <td>540.1 mm</td>
+                    </tr>
+                    <tr>
+                        <td>Hauteur</td>
+                        <td>417.4 mm</td>
+                    </tr>
+                    <tr>
+                        <td>Profondeur</td>
+                        <td>186.8 mm</td>
+                    </tr>
+                    <tr>
+                        <td>Poids</td>
+                        <td>2.48 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Pack multi-écrans</td>
+                        <td>Non</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div>
+                <p>Alimentation</p>
+                <table>
+                    <tr>
+                        <td>Consommation</td>
+                        <td>25 W</td>
+                    </tr>
+                    <tr>
+                        <td>Consommation en veille</td>
+                        <td>0.5 W</td>
+                    </tr>
+                    <tr>
+                        <td>Alimentation interne</td>
+                        <td>Non</td>
+                    </tr>
+                </table>
+            </div>
+
         </div>
 
     </main>
 
     <footer class="container">
+
+        <div>
+            <div>
+                <i class="icon-display"></i>
+                <p>Ordinateurs</p>
+            </div>
+            <div>
+                <i class="icon-data"></i>
+                <p>Périphériques et composants</p>
+            </div>
+            <div>
+                <i class="icon-phone"></i>
+                <p>Téléphones</p>
+            </div>
+            <div>
+                <i class="icon-clock"></i>
+                <p>Objets connectés</p>
+            </div>
+        </div>
+
+        <div>
+            <div>
+                <p>Moyen de paiement</p>
+                <div>
+                    <img src="images/payment.png"></img>
+                </div>
+            </div>
+
+            <div>
+                <p>Sur les réseaux sociaux</p>
+                <div>
+                    <div>
+                        <i class="icon-facebook"></i>
+                    </div>
+                    <div>
+                        <i class="icon-instagram"></i>
+                    </div>
+                    <div>
+                        <i class="icon-twitter"></i>
+                    </div>
+                    <div>
+                        <i class="icon-linkedin"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <p>A propos</p>
+                <div>
+                    <a href="">Qui sommes nous ?</a>
+                    <a href="">Nos services</a>
+                    <a href="">Contactez-nous</a>
+                </div>
+            </div>
+        </div>
 
     </footer>
 
